--- a/blocks/news/__container/news__container.css
+++ b/blocks/news/__container/news__container.css
@@ -3,10 +3,17 @@
   flex-direction: column;
   max-width: 1360px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0 40px 100px 40px;
 }
+
+@media screen and (max-width: 1279px) {
+  .news__container {
+    padding-bottom: 56px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .news__container {
-    padding: 0 10px;
+    padding: 0 10px 32px 10px;
   }
 }
