--- a/blocks/support/support.css
+++ b/blocks/support/support.css
@@ -2,25 +2,6 @@
   background-color: #E7F0FF;
   width: 100%;
   display: flex;
-  /* justify-content: flex-end; */
-  /* box-sizing: border-box; */
   flex-direction: column;
   align-items: center;
-  /* padding: 100px 40px 100px 40px; */
-  /* gap: 10px; */
 }
-
-/* @media (max-width: 768px) {
-  .support {
-    max-width: 768px;
-    padding: 44px 40px 56px;
-  }
-
-}
-
-@media (max-width: 320px) {
-  .support {
-    max-width: 320px;
-    padding: 31px 10px 32px;
-  }
-} */
